[package]
name = "async-raft"
version = "0.6.1"
edition = "2018"
authors = ["Anthony Dodd <Dodd.AnthonyJosiah@gmail.com>"]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "An async implementation of the Raft distributed consensus protocol."
documentation = "https://docs.rs/async-raft"
homepage = "https://github.com/async-raft/async-raft"
keywords = ["raft", "consensus", "data-storage"]
license = "MIT/Apache-2.0"
repository = "https://github.com/async-raft/async-raft"
readme = "../README.md"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.1"
derive_more = { version="0.99", default-features=false, features=["from"] }
futures = "0.3"
log = "0.4"
rand = "0.8"
serde = { version="1.0", features=["derive"] }
thiserror = "1.0"
tokio = { version="1.17", default-features=false, features=["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
maplit = "1.0"
memstore = { version="0.2.0", path="../memstore" }
tracing-subscriber = { version="0.3", features=["env-filter"] }

[features]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
